# UNIME

./: .gitignore  README.md  compileAndRun.sh  installVeeLib.sh
ASM/: asmAsScript.sh  commonFuncs.asm  commonMacros.asm  exStrLen.asm  pergo.asm  pergo2.asm  testMult.asm
AlgorithmTraining/: arrayTests.c  compile.sh
ProgettoDeMeo1/: compile.sh  fusioneDiArray.c  moltiplicazioneDiInteri.c  ordinamentoEArray.c  prestito.c  problemaPenne.c  radiceQuadrata.c  recursion.c
ProgettoVillari/: index.php  schema.sql
ProgettoVillari/SQL/: db_schema.sql
ProgettoVillari/php/: base.php
ProgettoVillari/php/Core/: body.php  head.php
ProgettoVillari/php/Core/body/: content.php  jumbotron.php  loginControls.php  modalInfo.php  navbar.php  navbarContents.php  profileControls.php  scripts.php
ProgettoVillari/php/Global/: common.php  db.php  debug.php  global.php  session.php  tbl.php  utils.php
ProgettoVillari/php/Lib/: lib.php
ProgettoVillari/php/Lib/Impl/: db.php  (+8 more)
Random/: parser.cpp  rebusGen.cpp  sneakyBimap.cpp  testAST.cpp  testAlbero.c  testManager.cpp  testingOBParticleSystem.cpp
SO/: fleschIdx.py
SO/8april/: first.py  log.txt  second.py
SmallProjects/: CMakeLists.txt  digitReverser.c
SmallProjects/cmake/modules/: FindVeeLib.cmake
SmallProjects/src/: digitReverser.c
VeeLib/: CMakeLists.txt  VeeLib.h
VeeLib/include/VeeLib/: VeeLib.h
castano/web-inf/: ospedale_index.html
castano/web-inf/css/: ospedale.css
castano/web-inf/php_query/: querycartellecliniche.php  queryincuracon.php  querypazienti.php  querypazientieta.php  querypersonale.php  queryreparti.php  queryrepartiordinati.php  queryturni.php
db2/: Makefile  mk.sh  test_neo4j.py
db2/source/: 00_title.md  10_dbms_types.md  11_distributed_systems.md  12_distributed_architectures.md  13_parallel_dbmss_cloud_architectures.md  14_cloud_computing.md  15_sql_vs_nosql.md  16_oracle_plsql.md  17_nosql_types.md  18_cassandra.md  19_mongodb.md  20_hbase.md  21_neo4j.md  22_xml.md
db2/temp/: merged.md
doc/: doc.docx
f77/: fibonacci.f  hello_world.f
f77/eser/: cf.sh
ita_diritto/: app_diritto.md  mk.sh
numerical_calculus/: CMakeLists.txt
numerical_calculus/extra/: sub_vs_no_sub.asm  sub_vs_no_sub.cpp
numerical_calculus/include/: equations.hpp  folds.hpp  matrix.hpp  multiples.hpp  nc_cpp.hpp  representations.hpp  sorted_vector.hpp  utilities.hpp
numerical_calculus/temp/: old_lu_decomposition.cpp
numerical_calculus/test/: CMakeLists.txt
numerical_calculus/test/nc/: epsilon.cpp  fold.cpp  is_multiple_of.cpp  matrix.cpp  matrix_lu.cpp  matrix_norms.cpp  max_factorial.cpp  mod.cpp  solve_grade2_equation.cpp  sort_vector.cpp
numerical_calculus/test/utils/: test_utils.hpp
(+25 files in other folders)
